Update and rename ansible.yml to Ansible.yml

--- a/Ansible.yml
+++ b/Ansible.yml
@@ -1,22 +1,20 @@
+
+   # VPC
 ---
+
 - hosts: localhost
   become: yes
   tasks:
     - name: Create VPC
       ec2_vpc_net:
-        aws_access_key: ""
-        aws_secret_key: ""
-
         cidr_block: "10.0.0.0/16"
-        name: rakeshvpc
+        name: rakeshv:q!pc
         region: "eu-north-1"
         state: present
       register: vpc_result
 
     # Create Internet Gateway
     - ec2_vpc_igw:
-        aws_access_key: ""
-        aws_secret_key: ""
         vpc_id: "{{ vpc_result.vpc.id }}"
         region: "eu-north-1"
         state: present
@@ -26,8 +24,6 @@
 
     # Create subnets
     - ec2_vpc_subnet:
-        aws_access_key: ""
-        aws_secret_key: ""
         vpc_id: "{{ vpc_result.vpc.id }}"
         region: "eu-north-1"
         az: "eu-north-1a"
@@ -39,8 +35,6 @@
       register: pubsubnet_result
 
     - ec2_vpc_subnet:
-        aws_access_key: ""
-        aws_secret_key: ""
         vpc_id: "{{ vpc_result.vpc.id }}"
         cidr: "10.0.2.0/24"
         az: "eu-north-1b"
@@ -51,16 +45,35 @@
           Name: pvtsubnet
       register: pvtsubnet_result
 
-    # Security Group
+    # Create route tables
+    - ec2_vpc_route_table:
+        vpc_id: "{{ vpc_result.vpc.id }}"
+        region: "eu-north-1"
+        state: present
+        tags:
+          Name: route1
+        subnets: "{{ pubsubnet_result.subnet.id }}"
+        routes:
+          - dest: "0.0.0.0/0"
+            gateway_id: "{{ igw_result.gateway_id }}"
+      register: pubroute_table_result
+
+    - ec2_vpc_route_table:
+        vpc_id: "{{ vpc_result.vpc.id }}"
+        region: "eu-north-1"
+        state: present
+        tags:
+          Name: route2
+        subnets: ["{{ pvtsubnet_result.subnet.id }}"]
+
+    # Security group
     - ec2_group:
-        aws_access_key: ""
-        aws_secret_key: ""
-        vpc_id: "{{ vpc_results.vpc.id }}"
+        vpc_id: "{{ vpc_result.vpc.id }}"
         region: "eu-north-1"
         name: ansible
         description: allow
         tags:
-          Name:
+          Name: ansible
         rules:
           - proto: tcp
             from_port: 80
@@ -75,32 +88,7 @@
             cidr_ip: 0.0.0.0/0
       register: security_groups
 
-    # Route Tables
-    - ec2_vpc_route_table:
-        aws_access_key: ""
-        aws_secret_key: ""
-        vpc_id: "{{ vpc_results.vpc.id }}"
-        region: "eu-north-1"
-        state: present
-        tags:
-          Name: route1
-        subnets: ["{{ pubsubnet_result.subnet.id }}"]
-        route:
-          - dest: "0.0.0.0/0"
-            gateway_id: "{{ igw_result.gateway.id }}"
-      register: pubroute_table_result
-
-    - ec2_vpc_route_table:
-        aws_access_key: ""
-        aws_secret_key: ""
-        vpc_id: "{{ vpc_results.vpc.id }}"
-        region: "eu-north-1"
-        state: present
-        tags:
-          Name: route2
-        subnets: ["{{ pvtsubnet_result.subnet.id }}"]
-
-    # EC2
+    # EC2 instance
     - ec2:
         image: "ami-0f0ec0d37d04440e3"
         instance_type: "t3.micro"
@@ -110,9 +98,5 @@
         state: present
         vpc_subnet_id: "{{ pubsubnet_result.subnet.id }}"
         assign_public_ip: yes
-        group_id: "{{ sg_result.group.id }}"
-        aws_access_key: ""
-        aws_secret_key: ""
-        instance_tags:
-          Name: My_ansible
+        group_id: "{{ security_groups.group_id }}"
       register: ec2_result
