--- a/var.yml
+++ b/var.yml
@@ -26,7 +26,7 @@
     user_data: |
       #!bin/bash
       sudo yum iy install git httpd
-      git clone <url> /var/www/html
+      git clone https://github.com/thudumrakesh/ecomm.git /var/www/html
       sudo systemctl start httpd
       sudo systemctl enable httpd
   tasks:
